Portfolio alignment fixed

--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -20,13 +20,11 @@ h1 {
 @media (max-width: 768px) {
   .portfolio-section > div {
     display: flex;
-    width: 100vw;
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x mandatory;
     flex-wrap: nowrap;
     gap: 2rem;
-    margin-right: 2rem;
   }
   .portfolio-section > div::-webkit-scrollbar {
     display: none;
